entities and spring security