@@ -1,6 +1,6 @@
 package com.base.project.service.impl;
 
-import com.base.project.dto.ProductResponse;
+import com.base.project.dto.response.ProductResponse;
 import com.base.project.entity.Product;
 import com.base.project.repository.IProductRepository;
 import com.base.project.service.IProductService;
@@ -8,13 +8,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements IProductService {
 
+    private final IProductRepository productRepository;
+
     @Autowired
-    private IProductRepository productRepository;
+    public ProductServiceImpl(IProductRepository productRepository) {
+        this.productRepository = productRepository;
+    }
 
     @Override
     public List<ProductResponse> getAllProducts() {
@@ -25,9 +28,24 @@ public class ProductServiceImpl implements IProductService {
                                     .idProduct(product.getIdProduct())
                                     .productName(product.getProductName())
                                     .productDescription(product.getProductDescription())
+                        .productCategory(product.getProductCategory())
                                     .productPrice(product.getProductPrice())
                                     .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<ProductResponse> getProductsByCategory(String category) {
+        return productRepository.findByProductCategory(category)
+                .stream()
+                .map(product -> ProductResponse.builder()
+                        .idProduct(product.getIdProduct())
+                        .productName(product.getProductName())
+                        .productDescription(product.getProductDescription())
+                        .productCategory(product.getProductCategory())
+                        .productPrice(product.getProductPrice())
+                        .build())
+                .toList();
     }
 }
